# opengl-overlay-alpha-mask

./: CMakeLists.txt  main.cpp  scene.60  scene.slint
